--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "mongoose": "^5.0.8",
-    "morgan": "^1.9.0",
     "react": "^16.2.0",
     "react-bootstrap-table-next": "^0.1.3",
     "react-dom": "^16.2.0",
@@ -19,5 +18,15 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "cors": "^2.8.4",
+    "method-override": "^2.3.10",
+    "mocha": "^5.0.1",
+    "morgan": "^1.9.0",
+    "should": "^13.2.1"
   }
 }
