--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-bootstrap-table-next": "^0.1.3",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "sinon": "^4.4.2",
+    "sinon-mongoose": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,6 +29,7 @@
     "method-override": "^2.3.10",
     "mocha": "^5.0.1",
     "morgan": "^1.9.0",
-    "should": "^13.2.1"
+    "should": "^13.2.1",
+    "supertest": "^3.0.0"
   }
 }
