--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,9 +4,22 @@
   "private": true,
   "scripts": {
     "start": "node server.js",
-    "test": "node test/test.js"
+    "test": "mocha --timeout 10000"
   },
   "dependencies": {
-    "winston": "^2.4.0"
+    "winston": "^2.4.0",
+    "chai": "^4.1.2",
+    "supertest": "^3.0.0",
+    "chai-http": "^3.0.0"
+  },
+  "devDependencies": {
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "eslint": "^4.18.2",
+    "eslint-plugin-react": "^7.7.0",
+    "jest": "^22.4.2",
+    "method-override": "^2.3.10",
+    "mocha": "^5.0.1"
+    
   }
 }
