--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node server.js",
-    "test": "mocha --timeout 10000"
+    "test": "mocha --timeout 10000 --exit"
   },
   "dependencies": {
     "winston": "^2.4.0",
