--- a/package.json
+++ b/package.json
@@ -3,24 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^3.0.0",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.9.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "jslint": "^0.12.0",
+    "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.8",
     "react": "^16.2.0",
     "react-bootstrap-table-next": "^0.1.3",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "sinon": "^4.4.2",
-    "sinon-mongoose": "^2.0.2",
-    "supertest": "^3.0.0",
+    "store": "^2.0.12",
+    "body-parser": "^1.18.2",
     "winston": "^3.0.0-rc1"
   },
   "scripts": {
@@ -31,7 +26,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "body-parser": "^1.18.2",
+    
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "cors": "^2.8.4",
@@ -43,6 +38,9 @@
     "morgan": "^1.9.0",
     "should": "^13.2.1",
     "superagent": "^3.8.2",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "jslint": "^0.12.0"
   }
 }
