--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
@@ -15,7 +17,6 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "store": "^2.0.12",
-    "body-parser": "^1.18.2",
     "winston": "^3.0.0-rc1"
   },
   "scripts": {
@@ -26,7 +27,6 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "cors": "^2.8.4",
