--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "react": "^16.2.0",
     "react-bootstrap-table-next": "^0.1.3",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "react-redux-form": "^1.16.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
+    "redux-form": "^7.3.0",
     "store": "^2.0.12",
     "winston": "^3.0.0-rc1"
   },
