--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "express-validator": "^5.0.3",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.8",
     "react": "^16.2.0",
+    "react-alert": "^3.4.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-bootstrap-table-next": "^0.1.3",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-redux-form": "^1.16.6",
     "react-router-dom": "^4.2.2",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
