--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^4.2.2",
     "react-s-alert": "^1.4.1",
     "react-scripts": "1.1.1",
+    "react-toastify": "^3.4.3",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "redux-promise": "^0.5.3",
