--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-alert": "^3.4.0",
     "react-alert-template-basic": "^1.0.0",
     "react-bootstrap-table-next": "^0.1.3",
+    "react-datepicker": "^1.2.2",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-redux-form": "^1.16.6",
@@ -28,6 +29,7 @@
     "react-s-alert": "^1.4.1",
     "react-scripts": "1.1.1",
     "react-toastify": "^3.4.3",
+    "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "redux-promise": "^0.5.3",
