--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
+    "redux-multi": "^0.1.12",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "store": "^2.0.12",
